clusters/doc-oxide-one/netbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox-web-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: netbox.oxide.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netbox-web
            port:
              number: 8080
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - netbox.oxide.one
    secretName: netbox-ingress-cert # < cert-manager will store the created certificate in this secret.
